2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>

	Same changes for chgpasswd:
	* src/chgpasswd.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chgpasswd.c: main() split in process_flags(), check_flags(),
	check_perms(), open_files(), and close_files().
	* src/chgpasswd.c: Avoid assignments in comparisons.
	* src/chgpasswd.c: Avoid implicit brackets.
	* src/chgpasswd.c: Fix comments to match chgpasswd (group instead of
	user's passwords are changed).

2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Before pam_end(), the return value of the previous
	pam API was already checked. No need to validate it again.
	* src/chpasswd.c: New functions: process_flags(), check_flags(),
	check_perms(). Split out of main().
	* src/chpasswd.c: Other new functions: open_files(), close_files().
	This force flushing the password database after the password file is
	unlocked.
	* src/chpasswd.c: Avoid assignments in comparisons.
	* src/chpasswd.c: Avoid implicit brackets.

2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c (find_new_gid): A group with the specified name
	cannot exist at that time. Remove the check.
	* src/groupadd.c (find_new_gid): If oflg is set, gflg is also set.
	Use (!gflg), which is clearer than (!gflg || !oflg).
	* src/groupadd.c (find_new_gid): find_new_gid is never called when an
	GID is specified with -g. Simplify find_new_gid accordingly.
	* src/groupadd.c (process_flags): prefer fail_exit to exit. This avoid
	an explicit call to audit_logger().
	* src/groupadd.c (main): Before pam_end(), the return value of the
	previous pam API was already checked. No need to validate it again.
	* src/groupadd.c (main, check_perms): New function check_perms().
	Split the validation of the user's permissions out of main()

2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>

	src/groupadd.c cleanup